Kubernetes/create-db-fast.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserver
  labels:
    component: sqlserver
spec:
  selector:
    matchLabels:
      component: sqlserver
  serviceName: sqlserver
  template:
    metadata:
      labels:
        component: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: datnd2711/sqlserver:prod-0.72
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: sqlserver-data
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        command: [ "/bin/bash", "-c" ]
        args:
        - "/dbconfig/attach.sh && /opt/mssql/bin/sqlservr && tail -f /dev/null"
      imagePullSecrets:
      - name: my-dockerhub-secret
      volumes:
      - name: sqlserver-secret
        secret:
          secretName: sqlserver-secret
  volumeClaimTemplates:
  - metadata:
      name: sqlserver-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: nfs-delete
      resources:
        requests:
          storage: 3Gi
