Kubernetes/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: pharmacy-app
  name: sqlserver
  labels:
    component: sqlserver
spec:
  selector:
    matchLabels:
      component: sqlserver
  serviceName: sqlserver
  template:
    metadata:
      labels:
        component: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: datnd2711/sqlserver:v19
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: sqlserver-data
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        command: ["/bin/bash", "-c"]
        args:
        - "/dbconfig/attach.sh && /opt/mssql/bin/sqlservr && tail -f /dev/null"
        livenessProbe:
          exec:
            command: ["/bin/bash", "-c", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $(cat /mnt/secrets-store/MSSQL_SA_PASSWORD) -Q 'SELECT 1'"]
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 6
        readinessProbe:
          exec:
            command: ["/bin/bash", "-c", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $(cat /mnt/secrets-store/MSSQL_SA_PASSWORD) -Q 'SELECT 1'"]
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 6
        # securityContext:
        #   runAsUser: 1000
        #   runAsGroup: 3000
        #   fsGroup: 2000
      imagePullSecrets:
      - name: my-dockerhub-secret
      volumes:
      - name: sqlserver-secret
        secret:
          secretName: sqlserver-secret
  volumeClaimTemplates:
  - metadata:
      name: sqlserver-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: nfs-client
      resources:
        requests:
          storage: 3Gi
