Kubernetes/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pharmacy-app
  name: front-end
  labels:
    component: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      component: front-end
  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
      - name: front-end
        image: datnd2711/pharmacy-fe:v5
        ports:
        - containerPort: 80
          name: http-frontend
      imagePullSecrets:
      - name: my-dockerhub-secret
