Kubernetes/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
  namespace: pharmacy-app
spec:
  selector:
    component: back-end
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http-backend
