Kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: pharmacy-app
  name: sqlserver
  labels:
    component: sqlserver
spec:
  selector:
    component: sqlserver
  ports:
  - port: 1433
