Kubernetes/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
  namespace: pharmacy-app
spec:
  selector:
    component: front-end
  type: LoadBalancer
  ports:
  - name: http-fe
    protocol: TCP
    port: 80
    targetPort: http-frontend
    # nodePort: 32000
