Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-ingress
  namespace: pharmacy-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # if you don't want to use annotations
  rules:
  - host: demo.datlaid.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service
            port:
              name: http-fe
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-end-service
            port:
              name: http-be
